--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -32,6 +32,7 @@
         }
         margin-right: $horz-spacing-unit * 2;
       }
+      .donate-link {margin-left: $horz-spacing-unit * 2;}
       .btn {
         background-color: #134979;
         border: 1px solid #f2f2f2;
