--- a/sass/components/_tb_megamenu.scss
+++ b/sass/components/_tb_megamenu.scss
@@ -39,6 +39,10 @@
       color: $blue;
     }
   }
+  .btn {
+    background-image: none;
+    background-color: $mid-blue;
+  }
 }
 
 .l-region--navigation .tb-megamenu {
