--- a/sass/variables/_colors.scss
+++ b/sass/variables/_colors.scss
@@ -1,6 +1,7 @@
 $pale-blue      : #92cfe8;
 $light-blue     : #91bce3;
-$blue       : #1668b3;
+$blue           : #1668b3;
+$mid-blue       : #134979;
 $dark-blue      : #12395c;
 
 $orange         : #e4621c;
